--- a/scss/base/_base-styles.scss
+++ b/scss/base/_base-styles.scss
@@ -4,6 +4,7 @@ html {
 
 body {
     position:relative;
+    overflow-x:hidden; 
     background: $light;
     font-size: 1.5em; // currently ems cause chrome bug misinterpreting rems on body element
     line-height: 1.6;
@@ -131,17 +132,23 @@ nav{
 .projects{
     color:$light;
     position:relative;
+    overflow: hidden;
 }
 
 .project-container{
     padding: 10% 0;
     & h3{
+        text-align: center;
         color:$dark;
     }
 }
 .project{
     margin:0;
     padding:0;
+    & img{
+        width:360px;
+        height: 300px;
+    }
 }
 
 .project-info{
